--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+    <title>Javascript work</title>
+</head>
 <body>
 
     <h2>Use JavaScript to Display Input</h2>
